# magic-regexp

./: Cargo.toml  LICENSE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yaml
implementors/alloc/string/: trait.ToString.js
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/magic_regexp/core/traits/: trait.AsRegex.js
magic_regexp/: all.html  enum.Error.html  enum.Input.html  enum.Type.html  fn.create_reg_exp.html  fn.not.html  index.html  sidebar-items.js  trait.AsRegex.html  trait.Condition.html  type.Result.html
magic_regexp/core/traits/: enum.Error.html  trait.AsRegex.html  trait.Condition.html  type.Result.html
magic_regexp/core/type/: enum.Input.html  enum.Type.html  fn.not.html
src/: lib.rs  lib2.rs
src/core/: mod.rs  traits.rs  type.rs
src/magic_regexp/: lib.rs.html
src/magic_regexp/core/: mod.rs.html  traits.rs.html  type.rs.html
